tests/semantic_analysis/error/redefine_struct.c
./test/test6\.c:5:1: error:.*